Fix cropping of images in popup

--- a/src/Popup/Popup.css
+++ b/src/Popup/Popup.css
@@ -56,17 +56,17 @@
 }
 
 .popup-image {
-	display: block;
 	position: relative;
 	padding-top: 75.2%;
 	overflow: hidden;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .popup-image img {
 	position: absolute;
-	right: 0;
-	top: 0;
-	height: 100%;
+	min-height: 100%;
 	min-width: 100%;
 }
 
